log
Sat May 14 02:41:31 UTC 2022: 
 tests:  0|5
total_score: 0/70
ecc7a87
Sat May 14 23:05:28 UTC 2022: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:13: error: expected identifier before ‘[’ token
       if(n->[i][k]==0){
             ^
Compilation failed
b045636
